--- a/stormlight-archive/ci/shared/pyproject.toml
+++ b/stormlight-archive/ci/shared/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.11"
 rpi-ws281x = "^5.0.0"
 rpi-gpio = "^0.7.1"
 paho-mqtt = "^2.1.0"
+doit = "^0.36.0"
 
 [build-system]
 requires = ["poetry-core>=1.7.0", "poetry-dynamic-versioning>=0.17.1"]
