--- a/stormlight_archive/ci/shared/pyproject.toml
+++ b/stormlight_archive/ci/shared/pyproject.toml
@@ -3,7 +3,7 @@ name = "stormlight-archive"
 version = "0.1.0"
 description = "Application for running LED strings"
 authors = ["Stuart Stanley <stu00@mac.com>"]
-packages = [{include = "stormlight-archive"}]
+packages = [{include = "stormlight_archive"}]
 license = "MIT"
 readme = "README.md"
 
