--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ volumes:
   resin-data:
   dev-user:
 services:
-  stormlight-archiver:
+  stormlight-archive:
     build:
       context: .
       dockerfile: Dockerfile
